k8s-provision/common/kube-registry.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-registry
  name: kube-registry
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: kube-registry
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kube-registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-registry
    spec:
      containers:
      - name: kube-registry
        image: registry:2.6.2
        ports:
        - containerPort: 5000
          hostPort: 5000
